# fast-polyline.py

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
perf/: benchmark.py
src/: fast_polyline.py  fast_polyline_ext.c  polyline.c
tests/: test_fast_polyline.py
