[project]
name = "fast_polyline"
description = "Fast & Easy Google Polylines"
license = {text = "MIT"}
authors = [{name = "Ulysse Buonomo", email = "buonomo.ulysse@gmail.com"}]
keywords = ["compression", "geometry", "polyline"]
version = "0.1.0"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "polyline~=2.0",
    "pylint~=2.17",
    "pytest~=7.4",
    "commitizen~=3.5"
]

[tool.commitizen]
gpg_sign = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
